ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: customer.sandbox.curve.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sandbox.curve.tech
                port:
                  number: your-service-port



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Host $host;
spec:
  rules:
    - host: your-host-url.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: your-target-service
                port:
                  number: your-service-port
